[gd_scene load_steps=4 format=2]

[ext_resource path="res://Keypad.gd" type="Script" id=1]
[ext_resource path="res://fonts/Montserrat-Medium.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 2 )

[node name="Keypad" type="Control"]
margin_left = 314.0
margin_top = 76.0
margin_right = 702.0
margin_bottom = 514.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 388.0
margin_bottom = 217.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/MarginContainer"]
margin_right = 388.0
margin_bottom = 217.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.486275, 0.964706, 1, 1 )

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer"]
margin_right = 388.0
margin_bottom = 217.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 221.0
margin_right = 388.0
margin_bottom = 438.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="Button" type="Button" parent="VBoxContainer/GridContainer"]
margin_right = 127.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "1"

[node name="Button2" type="Button" parent="VBoxContainer/GridContainer"]
margin_left = 131.0
margin_right = 258.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "2"

[node name="Button3" type="Button" parent="VBoxContainer/GridContainer"]
margin_left = 262.0
margin_right = 388.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "3"

[node name="Button4" type="Button" parent="VBoxContainer/GridContainer"]
margin_top = 56.0
margin_right = 127.0
margin_bottom = 107.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "4"

[node name="Button5" type="Button" parent="VBoxContainer/GridContainer"]
margin_left = 131.0
margin_top = 56.0
margin_right = 258.0
margin_bottom = 107.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "5"

[node name="Button6" type="Button" parent="VBoxContainer/GridContainer"]
margin_left = 262.0
margin_top = 56.0
margin_right = 388.0
margin_bottom = 107.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "6"

[node name="Button7" type="Button" parent="VBoxContainer/GridContainer"]
margin_top = 111.0
margin_right = 127.0
margin_bottom = 162.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "7"

[node name="Button8" type="Button" parent="VBoxContainer/GridContainer"]
margin_left = 131.0
margin_top = 111.0
margin_right = 258.0
margin_bottom = 162.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "8"

[node name="Button9" type="Button" parent="VBoxContainer/GridContainer"]
margin_left = 262.0
margin_top = 111.0
margin_right = 388.0
margin_bottom = 162.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "9"

[node name="ButtonC" type="Button" parent="VBoxContainer/GridContainer"]
margin_top = 166.0
margin_right = 127.0
margin_bottom = 217.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Clear"

[node name="Button0" type="Button" parent="VBoxContainer/GridContainer"]
margin_left = 131.0
margin_top = 166.0
margin_right = 258.0
margin_bottom = 217.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "0"

[node name="ButtonOK" type="Button" parent="VBoxContainer/GridContainer"]
margin_left = 262.0
margin_top = 166.0
margin_right = 388.0
margin_bottom = 217.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Enter"

[connection signal="pressed" from="VBoxContainer/GridContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button8" to="." method="_on_Button8_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button9" to="." method="_on_Button9_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/ButtonC" to="." method="_on_ButtonC_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Button0" to="." method="_on_Button0_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/ButtonOK" to="." method="_on_ButtonOK_pressed"]
